// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> Snapshots Should render animal icon 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  className="c0"
  src="Animal.svg"
/>
`;

exports[`<Icon /> Snapshots Should render food icon 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  className="c0"
  src="Food.svg"
/>
`;

exports[`<Icon /> Snapshots Should render newChat icon 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  className="c0"
  src="NewChat.svg"
/>
`;

exports[`<Icon /> Snapshots Should render people icon 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  className="c0"
  src="People.svg"
/>
`;

exports[`<Icon /> Snapshots Should render person icon 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  className="c0"
  src="Person.svg"
/>
`;

exports[`<Icon /> Snapshots Should render search icon 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  className="c0"
  src="SearchIcon.svg"
/>
`;

exports[`<Icon /> Snapshots Should render threeDotsGrey icon 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  className="c0"
  src="ThreeDotsGray.svg"
/>
`;

exports[`<Icon /> Snapshots Should render threeDotsWhite icon 1`] = `
.c0 {
  outline: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  padding: 0;
  margin: 0;
}

<img
  alt="Icon component"
  className="c0"
  src="ThreeDotsWhite.svg"
/>
`;
